--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-10-08 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 1.0.3
+	* bug fixed in make_dglars
+
 2013-08-04 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 1.0.2
 	* dglars() function has been changed to handle the formula interface; dglars.fit()
 		works with the design matrix X and the responce vector y.
