--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-12-19 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 1.0.4
+	* output from cvdglars() function has been improved including an object of class 
+		"formula" used to describe the model estimated by cross-validation
+	* output from cvdglars.fit() function has been improved including a character vector 
+		with the name of the variables selected by cross-validation.
+
 2013-10-08 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 1.0.3
 	* bug fixed in make_dglars
 
