--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-08-09 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 1.0.5
+	* added reference to Journal of Statistical Software paper
+
 2013-12-19 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 1.0.4
 	* output from cvdglars() function has been improved including an object of class 
 		"formula" used to describe the model estimated by cross-validation
